--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <html>
 <head><title>V952</title></head>
 <body style="background-image:url(https://cdn.discordapp.com/attachments/739827989440626749/777900660100169768/4.png)">
+  <audio autoplay="" loop="">
+<source src="hs.mp3" type="audio/mpeg">
+</audio>
 </body>
 </html>
