--- a/index.html
+++ b/index.html
@@ -1,99 +1,9 @@
-<html><head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {box-sizing: border-box;}
-html {overflow-y: hidden;}
-body {font-family: Verdana, sans-serif; padding: 0px; margin: 0px; overflow-y: hidden;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1920px;
-  position: relative;
-  margin: auto;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
-</style>
-</head>
-<body>
-
-<div class="slideshow-container">
-
-<div class="mySlides fade" style="display: block;">
-  <img src="https://cdn.discordapp.com/attachments/388476908477874186/615268267807866887/load1.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade" style="display: none;">
-  <img src="https://cdn.discordapp.com/attachments/388476908477874186/615268291014819843/load2.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade" style="display: none;">
-  <img src="https://cdn.discordapp.com/attachments/388476908477874186/615268294881968148/load3.jpg" style="width:100%">
-</div>
-
-<div class="mySlides fade" style="display: none;">
-  <img src="https://cdn.discordapp.com/attachments/388476908477874186/615268298120232991/load4.jpg" style="width:100%">
-</div>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot active"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span>
-  <span class="dot"></span>    
-</div>
-
-<script>
-var slideIndex = 0;
-showSlides();
-
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 30000); // Change image every 30 seconds
-}
-</script>
-
-
-
-</body></html>
+<!DOCTYPE html>
+<html>
+<head><title>V952</title></head>
+<body style="background-image:url(https://cdn.discordapp.com/attachments/739827989440626749/777900660100169768/4.png)">
+<audio autoplay="" loop="">
+<source src="hs.mp3" type="audio/mpeg">
+  </audio>
+</body>
+</html>
