--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "eu">
 <head><title>V952</title></head>
 <body style="background-image:url(https://cdn.discordapp.com/attachments/739827989440626749/777900660100169768/4.png)">
 <audio autoplay="" loop="">
